syntax = "proto3";
package gameDataPb;

option optimize_for = SPEED;

enum DirState {
    NONE = 0;
    FRONT = 1;
    BACK = 2;
    LEFT = 3;
    RIGHT = 4;
    FRONTLEFT = 5;
    FRONTRIGHT = 6;
    BACKLEFT = 7;
    BACKRIGHT = 8;
}

enum MovEvent {
    MOVEFRONT = 0;
    MOVEBACK = 1;
    MOVELEFT = 2;
    MOVERIGHT = 3;
}

enum MagicPb {
    STONEMAGIC = 0;
    FIREBALL = 1;
}

message Vec3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message Vec2 {
    float x = 1;
    float y = 2;
}

message Event {
    bool start = 1;
    bool restart = 2;
    
    string playerName = 3;
        
    Vec2 mouseTranslation = 4;
    Vec3 controlNodeEulerAngles = 5;
    
    repeated MovEvent movEvents = 6;
    repeated MagicPb magicEvents = 7;
    repeated MagicPb addMagics = 8;
    repeated MagicPb rmMagics = 9;
}


message State {
    message PlayerInfo {
        string playerName = 1;
        
        DirState dirState = 2;
        Vec3 position = 3;
        Vec3 eulerAngle = 4;
        
        repeated MagicPb magicEvents = 5;
        repeated MagicPb addMagics = 6;
        repeated MagicPb rmMagics = 7;
    }
    
    uint64 playerIP = 1;
    map <uint64, PlayerInfo> playerInfos = 2;
}


//protoc -I=./ --cpp_out=./ gameData.proto
